--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/iamuzor/bunyan-discord.git"
+    "url": "git+https://github.com/iamuzor/bunyan-discord.git"
   },
   "keywords": [
     "bunyan",
