--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "UZOR",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "cross-fetch": "^3.0.6"
   },
   "directories": {
     "example": "example"
