--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "directories": {
     "example": "example"
   },
-  "devDependencies": {
-    "jest": "^26.6.3"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iamuzor/bunyan-discord.git"
