--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "UZOR",
   "license": "ISC",
   "dependencies": {
-    "cross-fetch": "^3.0.6"
+    "cross-fetch": "^3.0.6",
+    "jest": "^26.6.3"
   },
   "directories": {
     "example": "example"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "bunyan": "^1.8.15"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iamuzor/bunyan-discord.git"
