--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "bunyan-discord",
   "description": "A stream for bunyan logger that sends logs to a Discord channel",
   "version": "1.0.0",
-  "main": "index.js",
+  "types": "lib",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p ."
   },
-  "author": "UZOR",
+  "author": "UZOR <ninedevs.co.uk>",
   "license": "ISC",
   "dependencies": {
     "cross-fetch": "^3.0.6",
@@ -16,7 +18,10 @@
     "example": "example"
   },
   "devDependencies": {
-    "bunyan": "^1.8.15"
+    "@types/bunyan": "^1.8.6",
+    "bunyan": "^1.8.15",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "repository": {
     "type": "git",
