--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bunyan-discord",
+  "name": "@ninedevs/bunyan-discord",
   "description": "A stream for bunyan logger that sends logs to a Discord channel",
   "version": "1.0.0",
   "types": "lib",
@@ -8,14 +8,15 @@
     "test": "jest",
     "build": "tsc -p ."
   },
-  "author": "UZOR <ninedevs.co.uk>",
+  "author": "9Devs <ninedevs.co.uk>",
   "license": "ISC",
   "dependencies": {
     "cross-fetch": "^3.0.6",
     "jest": "^26.6.3"
   },
   "directories": {
-    "example": "example"
+    "lib": "lib",
+    "test": "tests"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
