--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ninedevs/bunyan-discord",
   "description": "A stream for bunyan logger that sends logs to a Discord channel",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "types": "lib",
   "main": "lib/index.js",
   "scripts": {
@@ -11,8 +11,7 @@
   "author": "9Devs <ninedevs.co.uk>",
   "license": "ISC",
   "dependencies": {
-    "cross-fetch": "^3.0.6",
-    "jest": "^26.6.3"
+    "cross-fetch": "^3.0.6"
   },
   "directories": {
     "lib": "lib",
@@ -22,7 +21,8 @@
     "@types/bunyan": "^1.8.6",
     "bunyan": "^1.8.15",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "jest": "^26.6.3"
   },
   "repository": {
     "type": "git",
